tests/errors/array_05.f90
real function f()
    integer :: w(*)
end function

program array_05
    print *, f()
end program
